# AutoGrid

./: .gitignore  ChangeLog  Makefile  Makefile.20070430  Makefile.am  Makefile.pre-autoconf  NEWS  README  README.md  atom_parameter_manager.cpp  atom_parameter_manager.h  autocomm.h  autocomm.h-extra-maps  autodock.h  autoglobal.h  autogrid.h  banner.c  banner.cpp  bhtree.cpp  bhtree.h  bondmanager.cpp  bondmanager.h  calc_vina_potential.cpp  check_size.c  check_size.cpp  configure  configure-universalDarwin  configure.ac  constants.h  convertmap.c  convertmap.cpp  copyfilesfromAD  distdepdiel.cpp  distdepdiel.h  first_parm.c  get_atom_type.c  get_atom_type.h  gpfparser.c  gpfparser.cpp  gpftoken.h  (+46 more)
Tests/: autogrid4test.py  hsg1_no_receptor_types.gpf  hsg1_sm.gpf  hsg1_sm.pdbqt  hsg1_sm_minus_two_types.gpf  hsg1_sm_no_parameter_file.gpf  py_hsg1_sm.A.map  py_hsg1_sm.C.map  py_hsg1_sm.HD.map  py_hsg1_sm.N.map  py_hsg1_sm.NA.map  py_hsg1_sm.OA.map  py_hsg1_sm.d.map  py_hsg1_sm.e.map  testA.gpf  testA.pdbqt  testA_summary.txt  testC.gpf  testC.pdbqt  testC_summary.txt  testHD.gpf  testHD.pdbqt  testHD_summary.txt  testN.gpf  testN.pdbqt  testNA.gpf  testNA.pdbqt  testNA_summary.txt  testN_summary.txt  testOA.gpf  testOA.pdbqt  testOA_summary.txt  testS.gpf  testS.pdbqt  testSA.gpf  testSA.pdbqt  testSA_summary.txt  testS_summary.txt  test_autogrid4.py  write_python_maps.py  (+5 more)
ad4_shared/: autocomm.h  constants.h  dpftoken.h  memalloc.cc  memalloc.h  mingw_getrusage.cc  mingw_sys_times.h  mingw_sysconf.h  ranlib.cc  ranlib.h  read_parameter_library.cc  stop.cc  stop.h  structs.h  targetfile.cc  targetfile.h  threadlog.cc  threadlog.h  timesys.h  timesyshms.h  typedefs.h
win_build/: autogrid.dsp  autogrid.dsw  autogrid.ncb  autogrid.opt  autogrid.plg
